--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -10,10 +10,15 @@
       <ion-icon name="car"></ion-icon>
       <ion-label>Conductor</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="misviajes">
+      <ion-icon name="map"></ion-icon>
+      <ion-label>Mis Viajes</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="pasajero">
       <ion-icon name="person"></ion-icon>
       <ion-label>Pasajero</ion-label>
     </ion-tab-button>
+    
   </ion-tab-bar>
 
   
