--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,17 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+ ion-content {
+    --background: none; /* Elimina el fondo predeterminado */
+    background-image: url('https://img.freepik.com/vector-premium/textura-blanca-fondo-degrada-color-blanco_737564-275.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.pacifico-regular {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
