--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,24 +1,98 @@
-ion-avatar {
-  --border-radius: 4px;
-  padding: 5px;
+
+
+.toolbar-custom {
+  --background: #fff;
+  --ion-toolbar-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+  height: 70px;
 }
-ion-toolbar{
-  border-radius: 10px;
-  font-size: medium;
-  
+
+.user-avatar img {
+  border-radius: 50%;
+  margin: 5px;
 }
-ion-item{
-  border-radius: 10px;
-  margin-top: 10px;
-}
-ion-text{
-  display: flex;
-  size: 30px;
+
+.email-title {
   font-weight: bold;
-  text-align: center;
-  flex-wrap: nowrap;
-  flex-direction: column;
+  font-size: 18px;
 }
-.iconos{
-  padding-top: 5px;
+
+.car-info ion-icon {
+  color: #ffaa00;
+}
+
+.content-custom {
+  background-color: #f5f5f5;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+.star-filled {
+  color: #ffaa00;
+}
+
+.options-card {
+  margin: 20px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.greeting-text {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.option-grid {
+  margin-top: 20px;
+}
+
+.option-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding: 15px;
+  background-color: #4caf50;
+  border-radius: 10px;
+  color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.option-icon {
+  font-size: 40px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+
+//animaciones
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+    
+  }
+  100% {
+    transform: scale(1);
+    
+  }
+}
+
+.pulse-animation {
+  animation: pulse 1.5s infinite; 
 }
