--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,21 +1,20 @@
-<ion-content color="primary">
+<ion-content class="login-content">
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size-md="6" size-lg="4">
-        <ion-card>
+        <ion-card class="login-card">
           <ion-card-header>
-            <ion-card-title class="ion-text-center">TeLLevoApp</ion-card-title>
-            <img src="assets/logo.png" alt="Logo" class="logo" />
+            <ion-card-title class="ion-text-center pacifico-regular">TeLLevoApp</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <form (ngSubmit)="login()">
               <ion-item>
-                <ion-label position="floating" name="email">Correo Electrónico</ion-label>
+                <ion-label position="floating">Correo Electrónico</ion-label>
                 <ion-input type="email" [(ngModel)]="urs.email" name="email" required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-label position="floating" name="contrasena">Contraseña</ion-label>
+                <ion-label position="floating">Contraseña</ion-label>
                 <ion-input type="password" [(ngModel)]="urs.contrasena" name="contrasena" required></ion-input>
               </ion-item>
 
