--- a/src/app/misviajes/misviajes.page.scss
+++ b/src/app/misviajes/misviajes.page.scss
@@ -1,13 +1,44 @@
+.viajes-content {
+  background-color: #f2f2f2; 
+  padding: 15px;
+}
+
+.viaje-card ion-card {
+  border-radius: 15px; /* Bordes redondeados */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+  margin-bottom: 15px;
+}
+
+.viaje-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.viaje-icon {
+  font-size: 24px;
+  color: #ffaa00; 
+}
+
+.viaje-info {
+  margin: 0;
+  font-size: 16px;
+  color: #333;
+  line-height: 1.5;
+}
+
 .map-container {
-    width: 100%;
-    height: 200px; /* Ajusta según tus necesidades */
-    margin-top: 10px; /* Espaciado entre el mapa y el contenido */
-  }
-  
-  .viaje-card {
-    margin: 10px;
-    padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9; /* Fondo claro */
-  }
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  margin-top: 10px;
+  background-color: #e0e0e0; 
+}
+
+ion-button {
+  margin-top: 15px;
+  --border-radius: 10px;
+  --background: #ff4d4f; 
+  --border-color: #ff4d4f;
+  --color: white;
+}
