--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,8 @@
 :root {
-    --ion-color-primary: #4cacaf;
+    --ion-color-primary: #e97c00;
     --ion-color-secondary: #FFC107;
     --ion-color-tertiary: #f1683e;
     --ion-color-light: #f4f4f4;
     --ion-color-dark: #333;
   }
+
