Verificacion-vehiculo-usuario

--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -5,10 +5,10 @@
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="conductor">
+    <ion-tab-button disabled="{{tieneVehiculo}}" tab="conductor">
       <ion-icon name="car"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="misviajes">
+    <ion-tab-button  disabled="{{tieneVehiculo}}" tab="misviajes">
       <ion-icon name="map"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="pasajero">
