--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -14,6 +14,9 @@
     <ion-tab-button tab="pasajero">
       <ion-icon name="person"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="setting">
+      <ion-icon name="settings"></ion-icon>
+    </ion-tab-button>
     
   </ion-tab-bar>
 
