--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -20,12 +20,12 @@
                   <p>Costo: ${{ viaje.costo }} por persona</p>
                   <p>Hora Salida: {{ viaje.horaSalida }}</p>
 
-                  <ion-button [disabled]="reserva" color="primary" fill="outline" expand="block" (click)="reservarAsiento(viaje )">
+                  <ion-button [disabled]="reserva" color="primary" fill="outline" expand="block" (click)="reservarAsiento(viaje, viaje.id , viaje.capacidad)">
                     <ion-icon name="checkmark" slot="start"></ion-icon>
                     Reservar Asiento
                   </ion-button>
 
-                  <ion-button (click)="eliminarReserva()" [disabled]="EliminarReserva" expand="block" fill="clear" shape="round" color="danger">
+                  <ion-button (click)="eliminarReserva(viaje.id,viaje.capacidad)" [disabled]="EliminarReserva" expand="block" fill="clear" shape="round" color="danger">
                     <ion-icon name="trash" slot="start"></ion-icon>
                     Eliminar Reserva
                   </ion-button>
