--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --ion-color-primary: #e97c00;
+    --ion-color-primary: #008aff;
     --ion-color-secondary: #FFC107;
     --ion-color-tertiary: #f1683e;
     --ion-color-light: #f4f4f4;
