--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,43 +1,41 @@
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto w-auto" src="assets/LOGOTELLEVO.png" alt="TeLLevoApp Logo">
-  </div>
-
-  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form class="space-y-6" action="#" method="POST" (ngSubmit)="login()">
-      <div>
-        <label for="email" class="block text-sm/6 font-medium text-gray-900">Email</label>
-        <div class="mt-2">
-          <input id="email" name="email" type="email" [(ngModel)]="urs.email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
-        </div>
-      </div>
-
-      <div>
-        <div class="flex items-center justify-between">
-          <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
-          <div class="text-sm">
-            <a class="font-semibold text-a">¿Has olvidado tu contraseña?</a>
+<ion-content>
+  <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <img class="mx-auto w-auto" src="assets/LOGOTELLEVO.png" alt="TeLLevoApp Logo">
+    </div>
+    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+      <form class="space-y-6" action="#" method="POST" (ngSubmit)="login()">
+        <div>
+          <label for="email" class="block text-sm/6 font-medium text-gray-900">Email</label>
+          <div class="mt-2">
+            <input id="email" name="email" type="email" [(ngModel)]="urs.email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
           </div>
         </div>
-        <div class="mt-2">
-          <input id="password" name="password" type="password" [(ngModel)]="urs.contrasena" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
+  
+        <div>
+          <div class="flex items-center justify-between">
+            <label for="password" class="block text-sm/6 font-medium text-gray-900">Contraseña</label>
+            <div class="text-sm">
+              <a class="font-semibold text-a">¿Has olvidado tu contraseña?</a>
+            </div>
+          </div>
+          <div class="mt-2">
+            <input id="password" name="password" type="password" [(ngModel)]="urs.contrasena" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
+          </div>
         </div>
-      </div>
-
-      <div>
-        <ion-button expand="block" type="submit" class="text-sm font-semibold shadow-sm" color="primary">
-          Entrar
-        </ion-button>
-      </div>
-    </form>
-
-    <p class="mt-10 text-center text-sm text-gray-500">
-      ¿No tienes cuenta?
-      <a routerLink="/register" class="font-semibold  text-a">Regístrate</a>
-    </p>
-    
+  
+        <div>
+          <ion-button expand="block" type="submit" class="text-sm font-semibold shadow-sm" color="primary">
+            Entrar
+          </ion-button>
+        </div>
+      </form>
+  
+      <p class="mt-10 text-center text-sm text-gray-500">
+        ¿No tienes cuenta?
+        <a routerLink="/register" class="font-semibold  text-a">Regístrate</a>
+      </p>
+      
+    </div>
   </div>
-
-
-
-</div>
+</ion-content>
