--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,8 +1,8 @@
 :root {
     --ion-color-primary: #008aff;
     --ion-color-secondary: #FFC107;
-    --ion-color-tertiary: #f1683e;
-    --ion-color-light: #f4f4f4;
+    --ion-color-tertiary: #000c4d;
+    --ion-color-light: #ffffff;
     --ion-color-dark: #333;
   }
 
