--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -14,6 +14,10 @@
     <ion-tab-button tab="pasajero">
       <ion-icon name="person"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="notificaciones">
+      <ion-icon name="chatbox-ellipses"></ion-icon>
+      <ion-badge color="primary" mode="ios">42</ion-badge>
+    </ion-tab-button>
     
   </ion-tab-bar>
 
