--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
     </ion-avatar>
     <div class="div-header">
       <ion-title class="email-title" slot="start">
-        Javier Paredes
+        {{currentUserName}}
         <p>{{email}}</p>
       </ion-title>
     </div>
