--- a/src/app/misviajes/misviajes.page.html
+++ b/src/app/misviajes/misviajes.page.html
@@ -7,6 +7,7 @@
       </ion-card-header>
 
       <ion-card-content>
+        <p>Creado por: {{ viaje.nombreCreador }}</p>
         <p class="viaje-info">Capacidad: {{ viaje.capacidad }}</p>
         <p class="viaje-info">Costo: {{ viaje.costo }} CLP</p>
         <p class="viaje-info">Hora de Salida: {{ viaje.horaSalida }}</p>
