--- a/src/app/notificaciones/notificaciones.page.html
+++ b/src/app/notificaciones/notificaciones.page.html
@@ -8,11 +8,12 @@
   <ion-list>
     <ion-item *ngFor="let notificacion of notificaciones$ | async">
       <ion-label>
+        {{notificacion.notificationId}}
         <h2>{{ notificacion.tipo }}</h2>
         <p>{{ notificacion.mensaje }}</p>
         <p><small>{{ notificacion.fecha?.toDate() | date }}</small></p>
       </ion-label>
-      <ion-button (click)="marcarComoLeida(notificacion.id)">Marcar como leída</ion-button>
+      <ion-button (click)="eliminarNotificacion(notificacion.notificationId)">Eliminar Notificación</ion-button>
     </ion-item>
   </ion-list>
 </ion-content>
