--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -15,17 +15,22 @@
             <ion-list>
               <ion-item *ngFor="let viaje of viajes" class="viaje-item">
                 <ion-card class="ion-padding viaje-info-card">
-                  <h2>{{ viaje.destino }}</h2>
+                  <h2>{{viaje.destino }}</h2>
+                  <p>{{viaje.nombreCreador}}</p>            
                   <p>Capacidad disponible: {{ viaje.capacidad }} personas</p>
                   <p>Costo: ${{ viaje.costo }} por persona</p>
                   <p>Hora Salida: {{ viaje.horaSalida }}</p>
 
-                  <ion-button [disabled]="reserva" color="primary" fill="outline" expand="block" (click)="reservarAsiento(viaje, viaje.id , viaje.capacidad, viaje.usuarioId)">
+                  <ion-card-header class="viaje-header">
+                    <div id="map-{{ viaje.id }}" class="map-container"></div>
+                  </ion-card-header>
+
+                  <ion-button [disabled]="reserva" color="primary" fill="outline" expand="block" (click)="reservarAsiento(viaje, viaje.id.toString() , viaje.capacidad, viaje.usuarioId)">
                     <ion-icon name="checkmark" slot="start"></ion-icon>
                     Reservar Asiento
                   </ion-button>
 
-                  <ion-button (click)="eliminarReserva(viaje.id,viaje.capacidad)" [disabled]="EliminarReserva" expand="block" fill="clear" shape="round" color="danger">
+                  <ion-button (click)="eliminarReserva(viaje.id.toString(),viaje.capacidad)" [disabled]="EliminarReserva" expand="block" fill="clear" shape="round" color="danger">
                     <ion-icon name="trash" slot="start"></ion-icon>
                     Eliminar Reserva
                   </ion-button>
