--- a/src/app/pasajero/pasajero.page.scss
+++ b/src/app/pasajero/pasajero.page.scss
@@ -56,4 +56,10 @@
   ion-icon {
     margin-right: 8px;
   }
-  
+  .map-container {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    margin-top: 10px;
+    background-color: #e0e0e0; 
+  }
